--- a/Amundsen/helm-chart/templates/Amundsen-deployment/values.yaml
+++ b/Amundsen/helm-chart/templates/Amundsen-deployment/values.yaml
@@ -102,7 +102,7 @@ search:
   proxy:
     # search.proxy.endpoint -- Endpoint of the search proxy (i.e., ES endpoint etc.)
     # You should only need to change this, if you don't use the version in this chart.
-    endpoint:
+    endpoint: elasticsearch-master.user-pengfei.svc.cluster.local
 
     # The user and password of the search proxy. This should only be set if you bring your own proxy or ES cluster in which case you must also set elasticsearch.enabled to false
     # search.proxy.user --
@@ -118,7 +118,7 @@ search:
   # - name: "image-pull-secret"
 
   # search.imageTag -- The image tag of the search container.
-  imageTag: 2.6.0
+  imageTag: latest
 
   # search.replicas -- How many replicas of the search service to run.
   replicas: 1
@@ -181,7 +181,7 @@ metadata:
   # - name: "image-pull-secret"
 
   # metadata.imageTag -- The image tag of the metadata container.
-  imageTag: 3.5.0
+  imageTag: latest
 
   # metadata.replicas -- How many replicas of the metadata service to run.
   replicas: 1
@@ -229,7 +229,7 @@ frontEnd:
   # - name: "image-pull-secret"
 
   # frontEnd.imageTag -- The image tag of the frontend container.
-  imageTag: 3.11.1
+  imageTag: latest
 
   # frontEnd.servicePort -- The port the frontend service will be exposed on via the loadbalancer.
   servicePort: 80
@@ -352,7 +352,7 @@ elasticsearch:
   sysctlInitContainer:
     enabled: false
   # elasticsearch.enabled -- set this to false, if you want to provide your own ES instance.
-  enabled: true
+  enabled: false
   cluster:
     env:
       # elasticsearch.cluster.env.MINIMUM_MASTER_NODES -- required to match master.replicas
