--- a/Amundsen/helm-chart/templates/Amundsen-deployment/requirements.yaml
+++ b/Amundsen/helm-chart/templates/Amundsen-deployment/requirements.yaml
@@ -2,7 +2,8 @@ dependencies:
 #  - name: neo4j
 #    version: 1.2.2
 #    repository: https://charts.helm.sh/stable/
+
   - name: elasticsearch
-    version: 1.32.5
-    repository: https://charts.helm.sh/stable/
+    version: 7.13.4
+    repository:  https://helm.elastic.co
     condition: elasticsearch.enabled
