--- a/Amundsen/helm-chart/templates/Amundsen-deployment/values.yaml
+++ b/Amundsen/helm-chart/templates/Amundsen-deployment/values.yaml
@@ -102,7 +102,8 @@ search:
   proxy:
     # search.proxy.endpoint -- Endpoint of the search proxy (i.e., ES endpoint etc.)
     # You should only need to change this, if you don't use the version in this chart.
-    endpoint: elasticsearch-master.user-pengfei.svc.cluster.local
+    # elasticsearch-master.user-pengfei.svc.cluster.local
+    endpoint: 
 
     # The user and password of the search proxy. This should only be set if you bring your own proxy or ES cluster in which case you must also set elasticsearch.enabled to false
     # search.proxy.user --
@@ -348,38 +349,20 @@ neo4j:
 # By default, the ES chart runs with 3,3,2 nodes for master, data, client. Amundsen likely does not need so much,
 # so, this has been tuned down to 1,1,1.
 elasticsearch:
-  # If this set to true, you
+  # elasticsearch.enabled -- set this to false, if you want to provide your own ES instance.
+  enabled: true
+  # If this set to true, your es pod will require some admin privilege
+  fullnameOverride: "amundsen-elasticsearch-master"
   sysctlInitContainer:
     enabled: false
-  # elasticsearch.enabled -- set this to false, if you want to provide your own ES instance.
-  enabled: false
-  cluster:
-    env:
-      # elasticsearch.cluster.env.MINIMUM_MASTER_NODES -- required to match master.replicas
-      MINIMUM_MASTER_NODES: 1
-      # elasticsearch.cluster.env.EXPECTED_MASTER_NODES -- required to match master.replicas
-      EXPECTED_MASTER_NODES: 1
-      # elasticsearch.cluster.env.RECOVER_AFTER_MASTER_NODES -- required to match master.replicas
-      RECOVER_AFTER_MASTER_NODES: 1
-  master:
-    # elasticsearch.master.replicas -- only running amundsen on 1 master replica
-    replicas: 1
-  data:
-    # elasticsearch.data.replicas -- only running amundsen on 1 data replica
-    replicas: 1
-  client:
-    # elasticsearch.client.replicas -- only running amundsen on 1 client replica
-    replicas: 1
-  serviceType: ClusterIP
-  #  serviceAnnotations:
-  #    external-dns.alpha.kubernetes.io/hostname: amundsen-elasticsearch.dev.teamname.company.com
-  #    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
-  #    service.beta.kubernetes.io/aws-load-balancer-type: nlb
-  nodeAffinity: high
+  image: elasticsearch
+  esJavaOpts: -Xmx8g -Xms8g
   resources:
     limits:
-      cpu: 4
-      memory: 8Gi
+      memory: 10Gi
+    requests:
+      memory: 10Gi
+  
     
 ##############  Values for ingress ###############
 ingress:
